<resources>
    <string name="app_name">Stock Tendies</string>
    <string name="totalTendiesValue">Total Portfolio Value</string>
    <string name="totalPortfolioCost">Total Portfolio Cost</string>
    <string name="totalPortfolioChangeInCash">Change in Cash</string>
    <string name="dollarSign">$</string>
    <string name="totalTendiesPercentChange">Total Portfolio Change</string>
    <string name="tendieName">Ticker</string>
    <string name="tenderHoldings">Holdings</string>
    <string name="tenderPrices">Price</string>
    <string name="tendiesPercentSymbol">%</string>
    <string name="tendiesPercentPlusSymbol">+</string>
    <string name="tendiesPercentMinusSymbol">-</string>
    <string name="addTendies">Add</string>
    <string name="home">Home</string>
    <string name="resetTendies">Reset</string>
    <string name="aboutTendies">About </string>
    <string name="tendiesPrefs">TendiesPrefsFile</string>
    <string name="tenderDayChange">Change</string>
    <string name="notesLabel">Notes:</string>
    <string name="currentPriceLabel">Current Price:</string>
    <string name="tradePriceLabel">Trade Price:</string>
    <string name="holdingsLabel">Holdings:</string>
    <string name="saveHoldings">SAVE</string>
    <string name="pAndL">P/L</string>
    <string name="marketVal">Market Value</string>
    <string name="netCost">Net Cost</string>
    <string name="change">Change:</string>
    <string name="date">Date:</string>
    <string name="cost">Cost:</string>
    <string name="holdings">Holdings</string>
    <string name="details">Details</string>
</resources>
