<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/add"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/addTendies"
        android:visible="true"
        android:showAsAction="always" />
    <item
        android:id="@+id/reset"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/resetTendies"
        android:visible="true"
        android:showAsAction="always" />
    <item
        android:id="@+id/about"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/aboutTendies"
        android:visible="true"
        android:showAsAction="always" />
</menu>