<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.crisdev.stocktendies.MainActivity">

    <TextView
        android:id="@+id/mainTendiesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalTendiesValue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/mainTendiesValue"
        app:layout_constraintLeft_toRightOf="parent" />

    <TextView
        android:id="@+id/tendiesPercentDayChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tendiesPercentDayChange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/mainTendiesTitle"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollarSign"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tenderName"
        app:layout_constraintTop_toBottomOf="@+id/mainTendiesTitle"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/mainTendiesValue"/>

    <TextView
        android:id="@+id/mainTendiesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="99.99"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tenderName"
        app:layout_constraintTop_toBottomOf="@+id/mainTendiesTitle"
        app:layout_constraintLeft_toRightOf="@+id/dollarSign"/>

    <TextView
        android:id="@+id/tendiesPercentDayChangeVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="24.50"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/mainTendiesValue"
        app:layout_constraintRight_toLeftOf="@+id/tendiesPercentSymbol"
        app:layout_constraintTop_toTopOf="@+id/mainTendiesValue" />


    <TextView
        android:id="@+id/tendiesPercentMinusSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tendiesPercentMinusSymbol"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/mainTendiesValue"
        app:layout_constraintRight_toLeftOf="@+id/tendiesPercentDayChangeVal"
        app:layout_constraintTop_toTopOf="@+id/mainTendiesValue" />

    <TextView
        android:id="@+id/tendiesPercentSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tendiesPercentSymbol"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/mainTendiesValue"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainTendiesValue" />

    <TextView
        android:id="@+id/tenderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tenderName"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/refreshTendies"
        app:layout_constraintTop_toBottomOf="@+id/mainTendiesValue">

    </TextView>

    <TextView
        android:id="@+id/tenderHoldings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/tenderHoldings"
        app:layout_constraintLeft_toRightOf="@+id/tenderName"
        app:layout_constraintRight_toLeftOf="@+id/tenderPrice"
        app:layout_constraintTop_toBottomOf="@+id/tenderName"
        app:layout_constraintBottom_toTopOf="@+id/tenderName">
    </TextView>

    <TextView
        android:id="@+id/tenderPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/tenderPrices"
        app:layout_constraintTop_toBottomOf="@+id/tenderName"
        app:layout_constraintBottom_toTopOf="@+id/tenderName"
        app:layout_constraintRight_toLeftOf="parent">
    </TextView>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshTendies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tenderName">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/refreshTendies">
        </ListView>

    </android.support.v4.widget.SwipeRefreshLayout>


</android.support.constraint.ConstraintLayout>
