<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalGuideline0"
        app:layout_constraintGuide_percent="0.00"
        android:orientation="horizontal"/>


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalGuideline0.5"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="horizontal"/>


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalGuideline1"
        app:layout_constraintGuide_percent="0.15"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalGuideline2"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalGuideline3"
        app:layout_constraintGuide_percent="0.35"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalGuideline4"
        app:layout_constraintGuide_percent="0.45"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalGuideline5"
        app:layout_constraintGuide_percent="0.55"
        android:orientation="horizontal"/>


    <TextView
        android:id="@+id/ticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline0"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0.5"/>

    <TextView
        android:id="@+id/notesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notesLabel"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@id/notesInput"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline4"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline5"/>

    <TextView
        android:id="@+id/tradePriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tradePriceLabel"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tradePrice"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline2"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline3" />

    <TextView
        android:id="@+id/currentPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentPriceLabel"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@id/currentPrice"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline1"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline2"/>

    <TextView
        android:id="@+id/holdingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/holdingsLabel"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@id/holdings"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline3"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline4"/>

    <EditText
        android:id="@+id/notesInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLength="75"
        app:layout_constraintLeft_toRightOf="@id/notesLabel"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline4"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline5"/>

    <TextView
        android:id="@+id/currentPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        app:layout_constraintLeft_toRightOf="@id/currentPriceLabel"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline1"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline2"/>

    <EditText
        android:id="@+id/tradePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        app:layout_constraintLeft_toRightOf="@id/tradePriceLabel"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline2"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline3" />

    <EditText
        android:id="@+id/holdings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:digits="0123456789"
        android:maxLength="9"
        app:layout_constraintLeft_toRightOf="@id/holdingsLabel"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline3"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline4"/>

    <ProgressBar
        android:id="@+id/exceptionSpinner"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="parent"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline0"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline1"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent">

        <RadioButton
            android:id="@+id/buyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Buy" />

        <RadioButton
            android:id="@+id/sellBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sell" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>