<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrGuideline0"
        app:layout_constraintGuide_percent=".00"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrGuideline1"
        app:layout_constraintGuide_percent=".25"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrGuideline2"
        app:layout_constraintGuide_percent=".50"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrGuideline3"
        app:layout_constraintGuide_percent=".75"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrGuideline4"
        app:layout_constraintGuide_percent="1.00"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrHorizontalGuideline0"
        app:layout_constraintGuide_percent="0.00"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrHorizontalGuideline1"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrHorizontalGuideline2"
        app:layout_constraintGuide_percent="0.10"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrHorizontalGuideline3"
        app:layout_constraintGuide_percent="0.15"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrHorizontalGuideline4"
        app:layout_constraintGuide_percent="0.20"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrHorizontalGuideline5"
        app:layout_constraintGuide_percent="1.00"
        android:orientation="horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/vrHorizontalGuideline4"/>

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>


    <TextView
        android:id="@+id/vrTendieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/vrHorizontalGuideline0"
        app:layout_constraintBottom_toTopOf="@+id/vrHorizontalGuideline1"
        app:layout_constraintLeft_toRightOf="@+id/vrGuideline0"
        app:layout_constraintRight_toLeftOf="@+id/vrGuideline1"/>

    <TextView
        android:id="@+id/vrPandLlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pAndL"
        app:layout_constraintTop_toBottomOf="@+id/vrHorizontalGuideline0"
        app:layout_constraintBottom_toTopOf="@+id/vrHorizontalGuideline1"
        app:layout_constraintLeft_toRightOf="@+id/vrGuideline2"
        app:layout_constraintRight_toLeftOf="@+id/vrGuideline4"/>

    <TextView
        android:id="@+id/vrHoldingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tenderHoldings"
        app:layout_constraintTop_toBottomOf="@+id/vrHorizontalGuideline0"
        app:layout_constraintBottom_toTopOf="@+id/vrHorizontalGuideline1"
        app:layout_constraintLeft_toRightOf="@+id/vrGuideline1"
        app:layout_constraintRight_toLeftOf="@+id/vrGuideline2"/>

    <TextView
        android:id="@+id/vrMarketValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marketVal"
        app:layout_constraintTop_toBottomOf="@+id/vrHorizontalGuideline2"
        app:layout_constraintBottom_toTopOf="@+id/vrHorizontalGuideline3"
        app:layout_constraintLeft_toRightOf="@+id/vrGuideline0"
        app:layout_constraintRight_toLeftOf="@+id/vrGuideline2"/>

    <TextView
        android:id="@+id/vrNetCostLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/netCost"
        app:layout_constraintTop_toBottomOf="@+id/vrHorizontalGuideline2"
        app:layout_constraintBottom_toTopOf="@+id/vrHorizontalGuideline3"
        app:layout_constraintLeft_toRightOf="@+id/vrGuideline2"
        app:layout_constraintRight_toLeftOf="@+id/vrGuideline4"/>

    <TextView
        android:id="@+id/vrPAndL"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/vrHorizontalGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/vrHorizontalGuideline1"
        app:layout_constraintLeft_toRightOf="@+id/vrGuideline2"
        app:layout_constraintRight_toLeftOf="@+id/vrGuideline4"/>

    <TextView
        android:id="@+id/vrCurrPrice"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:text="0.00"
        app:layout_constraintBottom_toTopOf="@+id/vrHorizontalGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/vrHorizontalGuideline1"
        app:layout_constraintLeft_toRightOf="@+id/vrGuideline0"
        app:layout_constraintRight_toLeftOf="@+id/vrGuideline1"/>


    <TextView
        android:id="@+id/vrHoldings"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/vrHorizontalGuideline1"
        app:layout_constraintLeft_toRightOf="@+id/vrGuideline1"
        app:layout_constraintRight_toLeftOf="@+id/vrGuideline2"
        app:layout_constraintBottom_toTopOf="@+id/vrHorizontalGuideline2" />

    <TextView
        android:id="@+id/vrMarketValue"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/vrHorizontalGuideline3"
        app:layout_constraintLeft_toRightOf="@+id/vrGuideline0"
        app:layout_constraintRight_toLeftOf="@+id/vrGuideline2"
        app:layout_constraintBottom_toTopOf="@android:id/list" />

    <TextView
        android:id="@+id/vrNetCost"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/vrHorizontalGuideline3"
        app:layout_constraintLeft_toRightOf="@+id/vrGuideline2"
        app:layout_constraintRight_toLeftOf="@+id/vrGuideline4"
        app:layout_constraintBottom_toTopOf="@android:id/list" />

    <ProgressBar
        android:id="@+id/vrSpinner"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/vrGuideline0"
        app:layout_constraintLeft_toRightOf="@id/vrGuideline4"
        app:layout_constraintBottom_toTopOf="@android:id/list"/>


    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/vrHorizontalGuideline4"
        app:layout_constraintBottom_toTopOf="@+id/vrHorizontalGuideline5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>